# OOP-MAI-2025

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/.cache/clangd/index/: func.cpp.5CAB057CBC099B91.idx  func.hpp.F4C1EF7B9CFE3645.idx  main.cpp.84C01C21E315B0E0.idx  main.cpp.977977239A138904.idx  replacer.cpp.833EA7C27529AB72.idx  replacer.hpp.07E3BEEBD77ABEC0.idx  unit.cpp.D30D65CEBB935D0A.idx
lab1/include/: replacer.hpp
lab1/src/: replacer.cpp
lab1/tests/: unit.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: money.hpp
lab2/src/: money.cpp
lab2/tests/: unit.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.hpp  octagon.hpp  point.hpp  polygon.hpp  shapes.hpp  square.hpp  triangle.hpp
lab3/src/: figure.cpp  octagon.cpp  point.cpp  polygon.cpp  shapes.cpp  square.cpp  triangle.cpp
lab3/tests/: input_program.txt  unit_figure.cpp  unit_shapes.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figure.hpp  figure_array.hpp  point.hpp  rectangle.hpp  square.hpp  triangle.hpp
lab4/tests/: test_array.cpp  test_figures.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: druid.h  npc.h  orc.h  slaver.h
lab6/src/: druid.cpp  npc.cpp  observer.cpp  orc.cpp
lab6/tests/: unit.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: druid.h  factory.h  npc.h  observer.h  orc.h  slaver.h
lab7/src/: druid.cpp  factory.cpp  npc.cpp  observer.cpp  orc.cpp  slaver.cpp
lab7/tests/: unit.cpp
